--- a/composer.json
+++ b/composer.json
@@ -5,13 +5,18 @@
         "php": ">=7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "ext-json": "*",
+        "doctrine/annotations": "1.12.x-dev",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
+        "symfony/property-access": "5.1.*",
+        "symfony/serializer": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
+        "symfony/debug-bundle": "5.1.*"
     },
     "config": {
         "optimize-autoloader": true,
