--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,8 @@
 #index:
 #    path: /
 #    controller: App\Controller\DefaultController::index
+
+give_discount:
+  path: /discount
+  controller: App\Controller\MainController::handleShoppingCart
+  methods: POST
